klusrc/deployments/nginx-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-test
  labels:
    gateway-namespace-ref: nginx-test
