klusrc/deployments/nginx-test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-ngnix
spec:
  parentRefs:
    - name: envoy
      namespace: gateways
  rules:
    - backendRefs:
        - name: nginx-service
          port: 80
